--- a/license.src.html
+++ b/license.src.html
@@ -9,6 +9,14 @@
             font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", serif
         }
 
+        .bg {
+            width:800px;
+            text-align: center;
+            background: #FFFFE5 url(img/form_background.jpg) no-repeat;
+            margin: auto auto;
+            background-size: 100%;
+        }
+
         #title {
             cursor: pointer;
             text-decoration: none;
@@ -30,7 +38,7 @@
         }
     </style>
 </head>
-<body style="width:800px; background:url(img/form_background.jpg) no-repeat; margin: auto auto; background-size: 100%;">
+<body class="bg">
 <div id="top_pic"><br/><br/>
     <span id="title">&nbsp;Further Math Tools</span>
 </div>
