--- a/index.src.html
+++ b/index.src.html
@@ -14,6 +14,14 @@
             height: 200px;
         }
 
+        .bg {
+            width:800px;
+            text-align: center;
+            background: #FFFFE5 url(img/form_background.jpg) no-repeat;
+            margin: auto auto;
+            background-size: 100%;
+        }
+
         #info {
             width: 700px;
             margin: auto auto;
@@ -46,7 +54,7 @@
         }
     </style>
 </head>
-<body style="width:800px; text-align: center; background:url(img/form_background.jpg) no-repeat; margin: auto auto; background-size: 100%;">
+<body class="bg">
 <div id="top_pic"><br/><br/>
     <span id="title">&nbsp;Further Math Tools</span>
 </div>
@@ -78,8 +86,7 @@
 <br/>
 <span style="font-size:20px;">
     Developed and maintained by Hanzhi Zhou, licensed under the <a href="license.html" target="_blank">MIT license</a><br/>
-    Click <a target="_blank" href="fm.rdfz-edu.org.zip">here</a> to download the source code<br/>
+    Click <a target="_blank" href="https://github.com/hanzhi713/Discrete-Math-Tools">here</a> to download the source code<br/>
 </span>
-
 </body>
 </html>
