--- a/Graphs/undirected-graph-help.html
+++ b/Graphs/undirected-graph-help.html
@@ -653,6 +653,8 @@ jQuery<br/>
 Weaver.js<br/>
 Lodash.js<br/>
 <h2>Update catalog</h2>
+<strong>November 13th, 2017</strong><br/>
+1. Fixed a bug of Dijkstra (detailed)<br/><br/>
 <strong>August 26th, 2017</strong><br/>
 1. Adapted ECMAScript 2015. Babel is used to compile the script.<br/>
 2. Fixed some issues.<br/><br/>
@@ -668,7 +670,7 @@ Lodash.js<br/>
 1. Adapted Bootstrap<br/>
 2. Added spread layout<br/><br/>
 <strong>August 9th, 2017</strong><br/>
-1. Add multi-threading support for the minimal weight matching algorithm, with the use of generators (ES6).<br/>
+1. Added multi-threading support for the minimal weight matching algorithm, with the use of generators (ES6).<br/>
 2. Applied jQuery.<br/>
 3. Optimized the "Generate random graph" function.<br/>
 Note that the multi-threading support will be automatically disabled if the browser doesn't support generators<br/><br/>
