Removed redundant tags

--- a/index.src.html
+++ b/index.src.html
@@ -78,7 +78,7 @@
             </td>
             <td style="line-height: 40px">
                 <a href="Graphs/undirected-graph.html" target="_blank">Undirected Graphs</a><br/>
-                <a href="Graphs/directed-graph.html" target="_blank">Directed Graphs (Implementing...)</a>
+                <a href="Graphs/directed-graph.html" target="_blank">Directed Graphs</a>
             </td>
         </tr>
     </table>
