Load stuffs from jsdeliver

--- a/Graphs/undirected-graph-help.html
+++ b/Graphs/undirected-graph-help.html
@@ -653,6 +653,10 @@ jQuery<br/>
 Weaver.js<br/>
 Lodash.js<br/>
 <h2>Update catalog</h2>
+<strong>February 23rd, 2018</strong><br/>
+1. Fixed a bug of minimal weight matching (see this <a
+        href="https://github.com/hanzhi713/Discrete-Math-Tools/commit/32125ba3efd65a62d28213b125b111df71a930cb"
+        target="_blank">commit</a>)<br/><br/>
 <strong>November 13th, 2017</strong><br/>
 1. Fixed a bug of Dijkstra (detailed)<br/><br/>
 <strong>August 26th, 2017</strong><br/>
