--- a/Graphs/undirected-graph.src.html
+++ b/Graphs/undirected-graph.src.html
@@ -89,27 +89,31 @@
         }
     </style>
     <title>Graph theory tools</title>
-    <link href="css/cytoscape-context-menus.min.css" rel="stylesheet" type="text/css">
-    <link href="css/cytoscape.js-panzoom.min.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/cytoscape-context-menus@3/cytoscape-context-menus.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/cytoscape-panzoom@2/cytoscape.js-panzoom.min.css">
+
     <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <script src="js/cytoscape-3.2.6.min.js"></script>
-    <script src="../js/jquery-3.2.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>
     <link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="../css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css">
     <script src="../js/bootstrap.min.js"></script>
-    <script src="js/cytoscape-context-menus.min.js"></script>
-    <script src="js/lodash.min.js"></script>
+    <script src="js/gui-layout.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/weaverjs@1/dist/weaver.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mathjs@4/dist/math.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/webcola@3/WebCola/cola.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4/lodash.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/cytoscape@3/dist/cytoscape.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/cytoscape-cxtmenu@3/cytoscape-cxtmenu.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/cytoscape-cose-bilkent@4/cytoscape-cose-bilkent.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/cytoscape-panzoom@2/cytoscape-panzoom.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/cytoscape-cola@2/cytoscape-cola.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/cytoscape-spread@2/cytoscape-spread.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/cytoscape-snap-to-grid@2/cytoscape-snap-to-grid.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/cytoscape-context-menus@3/cytoscape-context-menus.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/cytoscape-graphml@1/cytoscape-graphml.min.js"></script>
+
     <script src="js/cytoscape-edgehandles-old.min.js"></script>
-    <script src="js/cytoscape-cxtmenu.min.js"></script>
-    <script src="js/cytoscape-panzoom.min.js"></script>
-    <script src="js/cytoscape-snap-to-grid.min.js"></script>
-    <script src="js/cola.min.js"></script>
-    <script src="js/cytoscape-cola.min.js"></script>
-    <script src="js/cytoscape-cose-bilkent.min.js"></script>
-    <script src="js/cytoscape-graphml.min.js"></script>
-    <script src="js/weaver.min.js"></script>
-    <script src="js/cytoscape-spread.js"></script>
-    <script src="js/gui-layout.min.js?ver=1.5"></script>
 </head>
 <body style="width: 1440px; margin: auto auto; text-align: center">
 <table class="form-inline">
