--- a/Graphs/directed-graph-help.src.html
+++ b/Graphs/directed-graph-help.src.html
@@ -109,6 +109,9 @@ Cytoscape-cose-bilkent.js<br/> Cytoscape-cxtmenu.js<br/> Cytoscape-panzoom.js<br
 Cytoscape-snap-to-grid.js<br/> Cytoscape-spread.js<br/> FontAwesone 4.7<br/> jQuery<br/> Weaver.js<br/> Lodash.js<br/>
 Math.js<br/>
 <h2>Update catalog</h2>
+<strong>March 3rd, 2018</strong><br/>
+1. Fixed incorrect display of the native pagerank algorithm<br/>
+2. Changed the normalization parameter so that the normalization of the rank happens in between two iterations<br/><br/>
 <strong>October 14th</strong><br/>
 1. Optimized node labels in the process of animation of the page rank algorithm<br/>
 2. Added in process/final normalization of PR value<br/><br/>
