--- a/Graphs/undirected-graph.html
+++ b/Graphs/undirected-graph.html
@@ -287,6 +287,7 @@
     </tr>
 </table>
 <!-- <script src="js/runtime.js"></script> -->
+<script src="js/style-undirected.js"></script>
 <script src="js/main-undirected.js"></script>
 </body>
 </html>
