Extracted common code

--- a/Graphs/directed-graph.html
+++ b/Graphs/directed-graph.html
@@ -97,7 +97,8 @@
     <link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="../css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css">
     <script src="../js/bootstrap.min.js"></script>
-    <script src="js/gui-layout.min.js"></script>
+    
+    <script src="js/gui-layout.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/weaverjs@1/dist/weaver.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mathjs@4/dist/math.min.js"></script>
@@ -112,8 +113,7 @@
     <script src="https://cdn.jsdelivr.net/npm/cytoscape-snap-to-grid@2/cytoscape-snap-to-grid.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/cytoscape-context-menus@3/cytoscape-context-menus.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/cytoscape-graphml@1/cytoscape-graphml.min.js"></script>
-
-    <script src="js/cytoscape-edgehandles-old.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/cytoscape-edgehandles@3/cytoscape-edgehandles.min.js"></script>
 </head>
 <body style="width: 1440px; margin: auto auto; text-align: center">
 <table class="form-inline">
@@ -281,7 +281,9 @@
         </td>
     </tr>
 </table>
-<script src="js/runtime.min.js"></script>
-<script src="js/main-directed.babel.min.js"></script>
+<!-- <script src="js/runtime.min.js"></script> -->
+<script src="js/style-directed.js"></script>
+<script src="js/main-common.js"></script>
+<script src="js/main-directed.js"></script>
 </body>
 </html>
