--- a/Graphs/undirected-graph.html
+++ b/Graphs/undirected-graph.html
@@ -288,6 +288,7 @@
 </table>
 <!-- <script src="js/runtime.js"></script> -->
 <script src="js/style-undirected.js"></script>
+<script src="js/main-common.js"></script>
 <script src="js/main-undirected.js"></script>
 </body>
 </html>
