Fixed getAM and getWM to better deal with directed graphs Upload max-weight-matching (directly modified from the source code of networkx)

--- a/Graphs/directed-graph.html
+++ b/Graphs/directed-graph.html
@@ -246,8 +246,8 @@
                             <span id="cy_weight">0</span><br/>
                             <div id="process" style="width: 500px; font-size: 16px; font-weight: bold;"></div>
                             <button class="btn btn-small" onclick="getGraphML(cy)">Export to GraphML</button>
-                            <button class="btn btn-small" onclick="getAM(cy, true)">Get AM</button>
-                            <button class="btn btn-small" onclick="getWM(cy, true)">Get WM</button>
+                            <button class="btn btn-small" onclick="getAM(cy, true, true)">Get AM</button>
+                            <button class="btn btn-small" onclick="getWM(cy, true, true)">Get WM</button>
                             <button class="btn btn-small" onclick="clearCyStyle()">Clear Color</button>
                             <button class="btn btn-small btn-danger" onclick="clearSource()">Clear Elements</button>
                         </div>
@@ -260,8 +260,8 @@
                             <span id="ca_weight">0</span><br/>
                             <div id="path" style="width: 500px;"></div>
                             <button class="btn btn-small" onclick="getGraphML(ca)">Export to GraphML</button>
-                            <button class="btn btn-small" onclick="getAM(ca, true)">Get AM</button>
-                            <button class="btn btn-small" onclick="getWM(ca, true)">Get WM</button>
+                            <button class="btn btn-small" onclick="getAM(ca, true, true)">Get AM</button>
+                            <button class="btn btn-small" onclick="getWM(ca, true, true)">Get WM</button>
                             <button class="btn btn-small" onclick="clearCaStyle()">Clear Color</button>
                             <button class="btn btn-small btn-danger" onclick="clearResult()">Clear Elements</button>
                         </div>
