--- a/Graphs/undirected-graph.html
+++ b/Graphs/undirected-graph.html
@@ -251,8 +251,8 @@
                             <span style="font-weight: bold">Total Weight:&nbsp;</span>
                             <span id="cy_weight">0</span><br/>
                             <button class="btn btn-small" onclick="getGraphML(cy)">Export to GraphML</button>
-                            <button class="btn btn-small" onclick="getAM(cy, true)">Get AM</button>
-                            <button class="btn btn-small" onclick="getWM(cy, true)">Get WM</button>
+                            <button class="btn btn-small" onclick="getAM(cy, true, false)">Get AM</button>
+                            <button class="btn btn-small" onclick="getWM(cy, true, false)">Get WM</button>
                             <button class="btn btn-small" onclick="clearCyStyle()">Clear Color</button>
                             <button class="btn btn-small btn-danger" onclick="clearSource()">Clear Elements</button>
                         </div>
@@ -265,8 +265,8 @@
                             <span id="ca_weight">0</span><br/>
                             <div id="path" style="width: 500px;"></div>
                             <button class="btn btn-small" onclick="getGraphML(ca)">Export to GraphML</button>
-                            <button class="btn btn-small" onclick="getAM(ca, true)">Get AM</button>
-                            <button class="btn btn-small" onclick="getWM(ca, true)">Get WM</button>
+                            <button class="btn btn-small" onclick="getAM(ca, true, false)">Get AM</button>
+                            <button class="btn btn-small" onclick="getWM(ca, true, false)">Get WM</button>
                             <button class="btn btn-small" onclick="clearCaStyle()">Clear Color</button>
                             <button class="btn btn-small btn-danger" onclick="clearResult()">Clear Elements</button>
                         </div>
