--- a/Graphs/undirected-graph.html
+++ b/Graphs/undirected-graph.html
@@ -290,5 +290,6 @@
 <script src="js/style-undirected.js"></script>
 <script src="js/main-common.js"></script>
 <script src="js/main-undirected.js"></script>
+<script src="js/max-weight-matching.js"></script>
 </body>
 </html>
