Fixed negative index error Fixed non-max-cardinality min-weight matching

--- a/Graphs/undirected-graph.html
+++ b/Graphs/undirected-graph.html
@@ -218,7 +218,7 @@
                     <option value="myDijkstra()">Dijkstra (detailed)</option>
                     <option value="minimalWeightCycle()">Minimal Weight Cycle</option>
                     <option value="eulerianCycle()">Eulerian Trial/Cycle</option>
-                    <option value="minimalWeightMatching()">Minimal Weight Matching</option>
+                    <option value="pathTreeFlower()">Min/Max Weight Matching</option>
                     <option value="CPP()">Chinese Postman Problem</option>
                     <option value="nearestNeighbor()">Nearest Neighbor Algorithm</option>
                     <option value="TSPGlobalLowerBound()">TSP Lower Bound</option>
