disabled edgehandles by default

--- a/Graphs/undirected-graph.html
+++ b/Graphs/undirected-graph.html
@@ -216,6 +216,7 @@
                     <option value="prim()">Prim</option>
                     <option value="performDijkstra()">Dijkstra</option>
                     <option value="myDijkstra()">Dijkstra (detailed)</option>
+                    <option value="findBridge()">Bridge Finding Algorithm</option>
                     <option value="minimalWeightCycle()">Minimal Weight Cycle</option>
                     <option value="eulerianCycle()">Eulerian Trial/Cycle</option>
                     <option value="pathTreeFlower()">Min/Max Weight Matching</option>
@@ -250,7 +251,7 @@
                         <div style="width: 500px; margin: auto auto; text-align: center">
                             <span style="font-weight: bold">Total Weight:&nbsp;</span>
                             <span id="cy_weight">0</span><br/>
-                            <button class="btn btn-small" onclick="getGraphML(cy)">Export to GraphML</button>
+                            <button class="btn btn-small" onclick="enableDrawing(this)">Enable drawing</button>
                             <button class="btn btn-small" onclick="getAM(cy, true, false)">Get AM</button>
                             <button class="btn btn-small" onclick="getWM(cy, true, false)">Get WM</button>
                             <button class="btn btn-small" onclick="clearCyStyle()">Clear Color</button>
@@ -264,7 +265,6 @@
                             <span style="font-weight: bold">Total Weight:&nbsp;</span>
                             <span id="ca_weight">0</span><br/>
                             <div id="path" style="width: 500px;"></div>
-                            <button class="btn btn-small" onclick="getGraphML(ca)">Export to GraphML</button>
                             <button class="btn btn-small" onclick="getAM(ca, true, false)">Get AM</button>
                             <button class="btn btn-small" onclick="getWM(ca, true, false)">Get WM</button>
                             <button class="btn btn-small" onclick="clearCaStyle()">Clear Color</button>
