--- a/Graphs/undirected-graph-help.html
+++ b/Graphs/undirected-graph-help.html
@@ -541,7 +541,7 @@
         </table>
     </div>
     <div id="minimal-weight-matching">
-        <h3>Minimal Weight Matching</h3> Find the minimal weight matching in a weighted undirected graph by Edmond's
+        <h3>Minimal Weight Matching</h3> Find the minimal weight matching in a weighted undirected graph by Edmonds'
         algorithm, also known as "paths, trees and flowers"<br />
         <figure> <img src="demo/minimal-weight-matching.png" class="demo-pic" />
             <figcaption class="fig-caption">Finding the minimal weight matching on a weighted graph</figcaption>
