Added polynomial roots

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                 <a href="Numbers/gcd.html" target="_blank">Greatest Common Divisor</a><br/>
                 <a href="Numbers/diophantine-equations.html" target="_blank">Diophantine Equations</a><br/>
                 <a href="Numbers/simultaneous-congruences.html" target="_blank">Simultaneous Congruences</a><br/>
+                <a href="Numbers/polynomial-root.html" target="_blank">Polynomial Roots</a><br/>
             </td>
         </tr>
         <tr>
