--- a/Graphs/undirected-graph.html
+++ b/Graphs/undirected-graph.html
@@ -138,7 +138,7 @@
                     </button>
                 </p>
                 <label for="autorefresh" class="cb checkbox">
-                    <input id="autorefresh" type="checkbox" checked/>Auto-refresh
+                    <input id="autorefresh" type="checkbox"/>Auto-refresh
                 </label>&nbsp;
                 <label for="hide_result" class="cb checkbox">
                     <input id="hide_result" type="checkbox" onclick="hideResult(this);"/>Hide result
