--- a/Graphs/undirected-graph.html
+++ b/Graphs/undirected-graph.html
@@ -216,6 +216,7 @@
                     <option value="eulerianCycle()">Eulerian Trial/Cycle</option>
                     <option value="pathTreeFlower()">Min/Max Weight Matching</option>
                     <option value="CPP()">Chinese Postman Problem</option>
+                    <option value="hamiltonianPath()">Hamiltonian Path/Cycle</option>
                     <option value="nearestNeighbor()">Nearest Neighbor Algorithm</option>
                     <option value="TSPGlobalLowerBound()">TSP Lower Bound</option>
                 </select>
