--- a/Graphs/directed-graph.html
+++ b/Graphs/directed-graph.html
@@ -278,7 +278,7 @@
     </table>
     <script src="js/style-directed.js"></script>
     <script src="js/main-common.js"></script>
-    <script src="js/main-directed.js"></script>
+    <script src="js/main-directed.js?ver=123"></script>
     
 </body>
 
