Added held karp for undirected graphs.

--- a/Graphs/undirected-graph.html
+++ b/Graphs/undirected-graph.html
@@ -218,6 +218,7 @@
                         <option value="hamiltonianPath()">Hamiltonian Path/Cycle</option>
                         <option value="nearestNeighbor()">Nearest Neighbor Algorithm</option>
                         <option value="TSPGlobalLowerBound()">TSP Lower Bound</option>
+                        <option value="heldKarp()">Held Karp</option>
                     </select>
                     <br />
                     <label for="animation" class="cb checkbox">
