Moved code for held-karp to a single file.

--- a/Graphs/undirected-graph.html
+++ b/Graphs/undirected-graph.html
@@ -218,7 +218,7 @@
                         <option value="hamiltonianPath()">Hamiltonian Path/Cycle</option>
                         <option value="nearestNeighbor()">Nearest Neighbor Algorithm</option>
                         <option value="TSPGlobalLowerBound()">TSP Lower Bound</option>
-                        <option value="heldKarp()">Held Karp</option>
+                        <option value="heldKarpUndirected()">Held Karp</option>
                     </select>
                     <br />
                     <label for="animation" class="cb checkbox">
@@ -284,6 +284,7 @@
     <script src="js/main-common.js"></script>
     <script src="js/main-undirected.js"></script>
     <script src="js/max-weight-matching.js"></script>
+    <script src="js/held-karp.js"></script>
 </body>
 
 </html>
