--- a/Graphs/directed-graph.html
+++ b/Graphs/directed-graph.html
@@ -279,6 +279,7 @@
     <script src="js/style-directed.js"></script>
     <script src="js/main-common.js"></script>
     <script src="js/main-directed.js?ver=123"></script>
+    <script src="js/held-karp.js"></script>
     
 </body>
 
