Removed redundant code.

--- a/Graphs/directed-graph.html
+++ b/Graphs/directed-graph.html
@@ -213,7 +213,7 @@
                         <option value="performDijkstra()">Dijkstra</option>
                         <option value="pageRank()">Page Rank</option>
                         <option value="myPageRank()">Detailed Page Rank</option>
-                        <option value="heldKarp()">Held Karp</option>
+                        <option value="heldKarp(true)">Held Karp</option>
                     </select>
                     <br />
                     <label for="animation" class="cb checkbox">
