--- a/Graphs/undirected-graph.html
+++ b/Graphs/undirected-graph.html
@@ -218,7 +218,7 @@
                         <option value="hamiltonianPath()">Hamiltonian Path/Cycle</option>
                         <option value="nearestNeighbor()">Nearest Neighbor Algorithm</option>
                         <option value="TSPGlobalLowerBound()">TSP Lower Bound</option>
-                        <option value="heldKarpUndirected()">Held Karp</option>
+                        <option value="heldKarp(false)">Held Karp</option>
                     </select>
                     <br />
                     <label for="animation" class="cb checkbox">
