Updated held-karp Changed default layout to circle

--- a/Graphs/directed-graph.html
+++ b/Graphs/directed-graph.html
@@ -276,11 +276,10 @@
             </td>
         </tr>
     </table>
-    <script src="js/style-directed.js"></script>
-    <script src="js/main-common.js"></script>
-    <script src="js/main-directed.js?ver=123"></script>
-    <script src="js/held-karp.js"></script>
-    
+    <script src="js/style-directed.js?ver=2"></script>
+    <script src="js/main-common.js?ver=2"></script>
+    <script src="js/main-directed.js?ver=2"></script>
+    <script src="js/held-karp.js?ver=2"></script>
 </body>
 
 </html>
