--- a/Graphs/directed-graph.html
+++ b/Graphs/directed-graph.html
@@ -241,6 +241,9 @@
                                 <span style="font-weight: bold">Total Weight:&nbsp;</span>
                                 <span id="cy_weight">0</span><br />
                                 <div id="process" style="width: 500px; font-size: 16px; font-weight: bold;"></div>
+                                <button class="btn btn-small" onclick="enableDrawing(this)">
+                                    Enable drawing
+                                </button>
                                 <button class="btn btn-small" onclick="getGraphML(cy)">Export to GraphML</button>
                                 <button class="btn btn-small" onclick="getAM(cy, true, true)">Get AM</button>
                                 <button class="btn btn-small" onclick="getWM(cy, true, true)">Get WM</button>
