--- a/Graphs/undirected-graph-help.html
+++ b/Graphs/undirected-graph-help.html
@@ -150,11 +150,11 @@
     Alternatively, you can create edges by selecting
     nodes and clicking the 'add edge(s) between selected' button. This will create edges connecting all nodes that
     you've selected.<br />
-    Or you can use the edge handle plugin:<br />
+    Or you can use the edge handle plugin: Click the "enable drawing" button below the canvas and start adding edges by simply dragging<br />
     <img src="demo/edgehandles.png" /> <br />
     <br />
 
-    To put weight on these edges, input the weight number before add the edge.<br />
+    To put weight on these edges, input the weight number before adding the edge.<br />
     Weight can be omitted. The default
     weight is 1.<br />
     <br />
